精度入力追加

--- a/blog/templates/blog/dearpoint.html
+++ b/blog/templates/blog/dearpoint.html
@@ -3,6 +3,8 @@
 {% block content %}
     親愛度（１０以上）と消費ボルテージ数（１０まで）を入力。<br>
     難易度14はAP前提、難易度が1上がると1%の確率でGREAT以下が出ると設定<br>
+    基準レベルLでの精度a（％）を入力、精度低下率nは難易度が１あがるごとにGreat以下率がn%あがる（無入力だと精度:1、基準レベル:14、精度低下率:1）<br>
+    難易度15の精度(%) = (15-L)×n+a
     <form method="POST">{% csrf_token %}
         {{ form.as_p }}
         <div>
