--- a/blog/templates/blog/dearpoint.html
+++ b/blog/templates/blog/dearpoint.html
@@ -11,12 +11,25 @@
             <input type='submit' value="計算する" class="save btn btn-default">
         </div>
     </form>
-    {% for p in property %}
-        {{ p.name }}
-        {{ p.level }}
-        {{ p.notes }}
-        {{ p.getpoint }}
-        {{ p.Remarks }}
-        <br>
-    {% endfor %}
+    <br><br>
+    <table border = "3">
+        <tr>
+            <th>曲名</th>
+            <th>難易度</th>
+            <th>ノーツ数</th>
+            <th>得る親愛度</th>
+            <th>時間</th>
+            <th>備考</th>
+        </tr>
+        {% for p in property %}
+            <tr>
+                <td>{{ p.name }}</td>
+                <td>{{ p.level }}</td>
+                <td>{{ p.notes }}</td>
+                <td>{{ p.getpoint }}</td>
+                <td>{{ p.time }}</td>
+                <td>{{ p.Remarks }}</td>
+            </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
