--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,4 +4,7 @@
     <div>
         <h1><a href="{% url 'dearpoint' %}">親愛度計算</a></h1>
     </div>
+    <div>
+        <h1><a href="{% url 'music_list' %}">曲一覧</a></h1>
+    </div>
 {% endblock %}
