--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 h1 a, h2 a{
-    color: #C25100;
+    color: #00ffff;
     font-family: 'Lobster';
 }
 
@@ -8,13 +8,13 @@ body {
 }
 
 .page-header{
-    background-color: #C25100;
+    background-color: #00ffff;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #000000;
     font-size: 36pt;
     text-decoration: none;
 }
